# VeriModel

./: .gitignore  .vercelignore  BUGFIXES.md  BUGFIXES_VERIFIED.md  CLEANUP_SUMMARY.md  CODE_REVIEW.md  DEMO_CHECKLIST.md  DEPLOYMENT.md  DOCUMENTATION_INDEX.md  HƯỚNG_DẪN_SỬ_DỤNG.md  INSTALL.md  QUICK_START_DEPLOY.md  README.md  README_WEB.md  TAURI_SETUP.md  TROUBLESHOOTING.md  generate_malicious_models.py  install_dependencies.py  malicious_model.pkl  malicious_torch.pth  package.json  pyproject.toml  requirements.txt  run_api.py  run_web_ui.py  setup.py  test_server.py  vercel.json  verimodel.spec
.github/workflows/: ci.yml
api/: index.py
demo_models/: README_demo.md  generate_demo_models.py  safe_demo.pkl  safe_torch.pth
flow/: architecture.puml  process_flow.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
static/: app.js
test_models/: README.md  create_malicious.py  create_safe.py  malicious_model.pkl
tests/: helpers.py  test_file_analyzer_static_scanner.py
verimodel/: README.md  __init__.py  api_server.py  cli.py  dynamic_scanner.py  file_analyzer.py  gui.py  safetensors_converter.py  static_scanner.py  threat_intelligence.py  virtual_scan_dir.py  web_ui.py
verimodel-project/verimodel/: README.md  dynamic_scanner.py  static_scanner.py
verimodel/rules/: pickle.yar
verimodel/sandbox/: DockerFile
web_templates/: index.html
